New baobab sapling part 2